--- a/test/fixtures/producer_entities.yml
+++ b/test/fixtures/producer_entities.yml
@@ -1,2 +1,27 @@
 juniper:
   name: Juniper Cottage Bake Shop
+
+
+
+
+
+
+
+durham1 = FamilyGroup.create({name:'Durham1'});
+smith = Family.create({name: 'Smith Family', family_group: durham1, aggregator: tuckaway});
+jane = Consumer.new(first_name: 'Jane', last_name: 'Smith', balance: 0, email: 'janesmith@gmail.com', password: 'eatlocal', password_confirmation: 'eatlocal', family: smith)
+jane.save
+john = Consumer.new(first_name: 'John', last_name: 'Smith', balance: 0, email: 'johnsmith@gmail.com', password: 'eatlocal', password_confirmation: 'eatlocal', family: smith)
+john.save
+
+jones = Family.create({name: 'Jones Family', family_group: durham1, aggregator: tuckaway});
+sarah = Consumer.new(first_name: 'Sarah', last_name: 'Jones', balance: 0, email: 'sarahjones@gmail.com', password: 'eatlocal', password_confirmation: 'eatlocal', family: jones)
+sarah.save
+
+anderson = Family.create({name: 'Anderson Family', aggregator: tuckaway});
+chris = Consumer.new(first_name: 'Chris', last_name: 'Anderson', balance: 0, email: 'chrisanderson@gmail.com', password: 'eatlocal', password_confirmation: 'eatlocal', family: anderson)
+chris.save
+
+baker = Family.create({name: 'Baker Family', aggregator: juniper});
+ed = Consumer.new(first_name: 'Ed', last_name: 'Baker', balance: 0, email: 'edbaker@gmail.com', password: 'eatlocal', password_confirmation: 'eatlocal', family: baker)
+chris.save
